removed ir statements

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run Pytest
         run: |
           python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing --log-cli-level=info \
-          --write --optimization-levels 0 1 --synthesis
+          --write --optimization-levels 1 --synthesis
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
