--- a/.github/workflows/pytest-complete.yml
+++ b/.github/workflows/pytest-complete.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests/requirements.txt
+          python -m pip install typing-extensions --upgrade
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Download Icarus Verilog and Utilities
