--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r tests/requirements.txt
-          python -m pip install typing-extensions --upgrade
+          python -m pip install typing-extensions --upgrade # required for Python 3.9
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Download Icarus Verilog and Utilities
