--- a/.github/workflows/pytest-complete.yml
+++ b/.github/workflows/pytest-complete.yml
@@ -32,9 +32,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r tests/requirements.txt
-          python -m pip install typing-extensions --upgrade # required for Python 3.9
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r tests/requirements.txt
+          python3 -m pip install typing-extensions --upgrade # required for Python 3.9
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Download Icarus Verilog and Utilities
