--- a/.github/workflows/pytest-complete.yml
+++ b/.github/workflows/pytest-complete.yml
@@ -53,7 +53,7 @@ jobs:
           --write --synthesis --optimization-levels 0 1 2 4 8 16 32
 
           # No write
-          python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing --log-cli-level=INFO \
+          python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
           --optimization-levels 0 1 2 4 8 16 32
 
       - name: Upload artifacts
