--- a/.github/workflows/pytest-complete.yml
+++ b/.github/workflows/pytest-complete.yml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r tests/requirements.txt
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r tests/requirements.txt
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Download Icarus Verilog and Utilities
@@ -49,11 +49,11 @@ jobs:
       - name: Run Pytest
         run: |
           # With write
-          python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing --log-cli-level=INFO \
+          python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
           --write --synthesis --optimization-levels 0 1 2 4 8 16 32
 
           # No write
-          python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing --log-cli-level=INFO \
+          python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
           --optimization-levels 0 1 2 4 8 16 32
 
       - name: Upload artifacts
