--- a/.github/workflows/pytest-complete.yml
+++ b/.github/workflows/pytest-complete.yml
@@ -28,6 +28,8 @@ jobs:
             "--write --synthesis --first-test",
             "--synthesis --first-test",
           ]
+        pytest-opti-levels:
+          ["--optimization-levels 0 1 2 4 8", "--optimization-levels 16 32"]
 
     steps:
       - uses: actions/checkout@v3
@@ -55,9 +57,8 @@ jobs:
 
       - name: Run Pytest
         run: |
-          # With write
-          python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing ${{ matrix.pytest-args }} \
-          --optimization-levels 0 1 2 4 8 16 32
+          python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
+          ${{ matrix.pytest-args }} ${{ matrix.pytest-opti-levels }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
