--- a/.github/workflows/pytest-complete.yml
+++ b/.github/workflows/pytest-complete.yml
@@ -28,7 +28,7 @@ jobs:
             "--write --synthesis --first-test",
             "--synthesis --first-test",
           ]
-        pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16 32"]
+        pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16", "-L 32"]
 
     steps:
       - uses: actions/checkout@v3
