--- a/.github/workflows/pytest-complete.yml
+++ b/.github/workflows/pytest-complete.yml
@@ -1,6 +1,6 @@
-# Runs all pytest tests at more optimization levels
+# Runs complete pytest suite with all combinations of args
 
-name: pytest complete testing
+name: pytest
 
 on:
   push:
@@ -13,13 +13,25 @@ on:
       - synchronize
       - ready_for_review
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  build:
+  main:
     runs-on: ubuntu-latest
     if: ${{ !github.event.pull_request.draft }}
     strategy:
       fail-fast: false
       matrix:
+        pytest-args:
+          [
+            "--write --synthesis",
+            "--synthesis",
+            "--write --synthesis --first-test",
+            "--synthesis --first-test",
+          ]
+        pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16", "-L 32"]
         python-version: ["3.9", "3.10", "3.11"]
 
     steps:
@@ -41,6 +53,7 @@ jobs:
           sudo apt-get install iverilog expect
 
       - name: Download OSS CAD Suite for yosys
+        if: ${{ contains(matrix.pytest-args, 'synthesis') }}
         run: |
           wget -nv https://github.com/YosysHQ/oss-cad-suite-build/releases/download/2023-08-02/oss-cad-suite-linux-x64-20230802.tgz
           tar -xzf oss-cad-suite-linux-x64-20230802.tgz
@@ -48,16 +61,11 @@ jobs:
 
       - name: Run Pytest
         run: |
-          # With write
           python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
-          --write --synthesis --optimization-levels 0 1 2 4 8 16 32
-
-          # No write
-          python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
-          --optimization-levels 0 1 2 4 8 16 32
+          ${{ matrix.pytest-args }} ${{ matrix.pytest-opti-levels }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
           name: tests-data
-          path: tests/
+          path: tests/integration/data
