--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -53,7 +53,7 @@ jobs:
           python3 -m pytest -vs tests/ --cov=python2verilog/ --cov-report term-missing --log-cli-level=info \
           --write --optimization-levels 0 1 2 --synthesis
 
-  build:
+  full:
     runs-on: ubuntu-latest
     if: ${{ !github.event.pull_request.draft }}
     strategy:
@@ -105,12 +105,12 @@ jobs:
           name: tests-data
           path: tests/integration/data
 
-  results:
+  build:
     # Makes sure all runs of matrix are success
     if: ${{ always() }}
     runs-on: ubuntu-latest
     name: Final Results
-    needs: [quick, build]
+    needs: [quick, full]
     steps:
       - run: exit 1
         # see https://stackoverflow.com/a/67532120/4907315
