--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -105,7 +105,7 @@ jobs:
           name: tests-data
           path: tests/integration/data
 
-  build:
+  testing:
     # Makes sure all runs of matrix are success
     if: ${{ always() }}
     runs-on: ubuntu-latest
