--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -109,7 +109,7 @@ jobs:
 
   build:
     # Makes sure all runs of matrix are success
-    if: ${{ always() }}
+    if: ${{ always() && !github.event.pull_request.draft }}
     runs-on: ubuntu-latest
     needs: [quick, full]
     steps:
