--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -15,6 +15,7 @@ on:
       - ready_for_review
 jobs:
   build:
+    name: linting
     runs-on: ubuntu-latest
     if: ${{ !github.event.pull_request.draft }}
     strategy:
