--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -14,8 +14,7 @@ on:
       - synchronize
       - ready_for_review
 jobs:
-  build:
-    name: linting
+  linting:
     runs-on: ubuntu-latest
     if: ${{ !github.event.pull_request.draft }}
     strategy:
