--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -9,8 +9,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
-    name: packaging
+  packaging:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
