--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -9,8 +9,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
-    name: docs
+  docs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
