--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -109,6 +109,7 @@ jobs:
 
   testing:
     # Makes sure all runs of matrix are success
+    name: required
     if: ${{ always() }}
     runs-on: ubuntu-latest
     needs: [quick, full]
