--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,8 +5,14 @@ name: docs
 on:
   push:
     branches: ["main"]
+    paths: "docs/**"
   pull_request:
     branches: ["main"]
+    paths: "docs/**"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   docs:
