--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,11 +5,17 @@ name: docs
 on:
   push:
     branches: ["main"]
+    paths: "docs/**"
   pull_request:
     branches: ["main"]
+    paths: "docs/**"
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build:
+  docs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
