--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -63,9 +63,9 @@ jobs:
         pytest-args:
           [
             "--write --synthesis",
-            "--synthesis",
             "--write --synthesis --first-test",
-            "--synthesis --first-test",
+            "",
+            "--first-test",
           ]
         pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16", "-L 32"]
         python-version: ["3.9", "3.10", "3.11"]
