--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -1,4 +1,4 @@
-# Builds python package, installs it, then runs it from the CLI
+# Builds python package, installs it, then runs examples from the CLI
 
 name: packaging
 
