--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -36,11 +36,14 @@ jobs:
           mkdir build && cd build
           python3 -m pip install ..
 
-      - name: Run Examples
+      - name: Install requirements for examples
         working-directory: examples
         run: |
           python3 -m pip install -r requirements.txt
 
+      - name: Run examples
+        working-directory: examples
+        run: |
           python3 decorator_basic.py
           cat decorator_basic.sv
 
