--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -67,7 +67,7 @@ jobs:
             "",
             "--first-test",
           ]
-        pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16", "-L 32"]
+        pytest-opti-levels: ["-L 0 1 2 4 8", "-L 10"]
         python-version: ["3.9", "3.10", "3.11"]
 
     steps:
