--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -60,13 +60,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pytest-args:
-          [
-            "--write --synthesis",
-            "--write --synthesis --first-test",
-            "",
-            "--first-test",
-          ]
+        pytest-args: ["-R -S", "-R -S -F", "-F", ""]
         pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16"]
         python-version: ["3.9", "3.10", "3.11"]
 
