--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -60,14 +60,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pytest-args:
-          [
-            "--write --synthesis",
-            "--write --synthesis --first-test",
-            "",
-            "--first-test",
-          ]
-        pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16", "-L 32"]
+        pytest-args: ["-RS", "-FRS", "-F", ""]
+        pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16"]
         python-version: ["3.9", "3.10", "3.11"]
 
     steps:
