--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,10 +17,10 @@ repos:
     hooks:
       - id: black
 
-  - repo: https://github.com/PyCQA/autoflake
-    rev: v2.2.0
-    hooks:
-      - id: autoflake
+  # - repo: https://github.com/PyCQA/autoflake
+  #   rev: v2.2.0
+  #   hooks:
+  #     - id: autoflake
 
   - repo: https://github.com/pycqa/pylint
     rev: v2.17.4
@@ -36,11 +36,6 @@ repos:
             "-sn", # Don't display the score
             "--rcfile=.pylintrc",
           ]
-
-  - repo: https://github.com/PyCQA/autoflake
-    rev: v2.2.0
-    hooks:
-      - id: autoflake
 
   - repo: local
     hooks:
