--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
 "Bug Tracker" = "https://github.com/WorldofKerry/Python2Verilog/issues"
 
 [project.optional-dependencies]
-visual = ["matplotlib", "numpy", "dash_cytoscape", "dash"]
+full = ["matplotlib", "numpy", "dash_cytoscape", "dash"]
 
 [tool.setuptools.packages.find]
 "include" = ["python2verilog*"]
