--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,8 +18,29 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  iverilog:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: True
+      - name: Set up Iverilog
+        run: |
+          bash extern/iverilog_setup.sh
+      - name: Uploading iverilog as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: iverilog
+          path: extern/iverilog/driver/iverilog
+      - name: Uploading VVP as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: vvp
+          path: extern/iverilog/vvp/vvp
+
   quick:
     runs-on: ubuntu-latest
+    needs: iverilog
     strategy:
       fail-fast: false
       matrix:
@@ -28,10 +49,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: True
-      - name: Set up Iverilog
-        run: |
-          bash extern/iverilog_setup.sh
-
+      - uses: actions/download-artifact@v3
+        with:
+          name: iverilog
+      - uses: actions/download-artifact@v3
+        with:
+          name: vvp
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
@@ -61,6 +84,7 @@ jobs:
 
   full:
     runs-on: ubuntu-latest
+    needs: iverilog
     if: ${{ !github.event.pull_request.draft }}
     strategy:
       fail-fast: false
