--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: True
-      - name: Set up Iverilog
+      - name: Build Icarius Verilog
         run: |
           bash extern/iverilog_setup.sh
       - name: Uploading iverilog as artifact
@@ -32,7 +32,7 @@ jobs:
         with:
           name: iverilog
           path: extern/iverilog/driver/iverilog
-      - name: Uploading VVP as artifact
+      - name: Uploading vvp as artifact
         uses: actions/upload-artifact@v3
         with:
           name: vvp
@@ -47,8 +47,6 @@ jobs:
         python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v3
-        with:
-          submodules: True
       - uses: actions/download-artifact@v3
         with:
           name: iverilog
@@ -69,6 +67,8 @@ jobs:
       - name: Download Icarus Verilog Requirements
         run: |
           sudo apt-get install expect
+          iverilog -V
+          vvp -V
 
       - name: Download OSS CAD Suite for yosys
         run: |
@@ -95,6 +95,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: iverilog
+      - uses: actions/download-artifact@v3
+        with:
+          name: vvp
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
@@ -107,9 +114,9 @@ jobs:
           python3 -m pip install -r tests/requirements.txt
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Download Icarus Verilog and Utilities
+      - name: Download Icarus Verilog Requirements
         run: |
-          sudo apt-get install iverilog expect
+          sudo apt-get install expect
 
       - name: Download OSS CAD Suite for yosys
         if: ${{ contains(matrix.pytest-args, 'S') }}
