--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -19,6 +19,7 @@ concurrency:
 
 jobs:
   iverilog:
+    name: Build Iverilog
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
