--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,32 +28,18 @@ jobs:
       - name: Build Icarius Verilog
         run: |
           bash extern/iverilog_setup.sh
-      - name: Uploading iverilog as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: iverilog
-          path: extern/iverilog/driver/iverilog
-      - name: Uploading vvp as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: vvp
-          path: extern/iverilog/vvp/vvp
+      - name: Test Iverilog
+        run : |
+          extern/iverilog/driver/iverilog -V
 
   quick:
     runs-on: ubuntu-latest
-    needs: iverilog
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: iverilog
-      - uses: actions/download-artifact@v3
-        with:
-          name: vvp
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
@@ -65,9 +51,9 @@ jobs:
           python3 -m pip install -r tests/requirements.txt
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Download Icarus Verilog Requirements
+      - name: Download iverilog
         run: |
-          sudo apt-get install expect
+          sudo apt-get install iverilog expect
 
       - name: Download OSS CAD Suite for yosys
         run: |
@@ -94,14 +80,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: iverilog
-      - uses: actions/download-artifact@v3
-        with:
-          name: vvp
-
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
@@ -113,9 +91,9 @@ jobs:
           python3 -m pip install -r tests/requirements.txt
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Download Icarus Verilog Requirements
+      - name: Download iverilog
         run: |
-          sudo apt-get install expect
+          sudo apt-get install iverilog expect
 
       - name: Download OSS CAD Suite for yosys
         if: ${{ contains(matrix.pytest-args, 'S') }}
