--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,6 +22,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+      matrix:
+        python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -29,10 +31,25 @@ jobs:
       - name: Build Icarius Verilog
         run: |
           bash extern/iverilog_setup.sh
-      - name: Test Iverilog
-        run: |
           extern/iverilog/driver/iverilog -V
-          python3 -m pytest -L 0 1 2 -Iextern/iverilog/driver/iverilog
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r tests/requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Download expect
+        run: |
+          sudo apt-get install expect
+
+      - name: Run Pytest
+        run: |
+          python3 -m pytest -v tests/ --cov=python2verilog/ --cov-report term-missing \
+          --write -L 0 1 2 -Iextern/iverilog/driver/iverilog
 
   quick:
     runs-on: ubuntu-latest
