--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,38 +18,38 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # iverilog:
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       python-version: ["3.11"]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         submodules: True
-  #     - name: Build Icarius Verilog
-  #       run: |
-  #         bash extern/iverilog_setup.sh
-  #         extern/iverilog/driver/iverilog -V
-  #     - name: Set up Python ${{ matrix.python-version }}
-  #       uses: actions/setup-python@v3
-  #       with:
-  #         python-version: ${{ matrix.python-version }}
-  #     - name: Install dependencies
-  #       run: |
-  #         python3 -m pip install --upgrade pip
-  #         python3 -m pip install -r tests/requirements.txt
-  #         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+  iverilog:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.11"]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: True
+      - name: Build Icarius Verilog
+        run: |
+          bash extern/iverilog_setup.sh
+          extern/iverilog/driver/iverilog -V
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r tests/requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-  #     - name: Download expect
-  #       run: |
-  #         sudo apt-get install expect
+      - name: Download expect
+        run: |
+          sudo apt-get install expect
 
-  #     - name: Run Pytest
-  #       run: |
-  #         python3 -m pytest -v tests/ --cov=python2verilog/ --cov-report term-missing \
-  #         --write -L 0 1 2 -Iextern/iverilog/driver/iverilog
+      - name: Run Pytest
+        run: |
+          python3 -m pytest -v tests/ --cov=python2verilog/ --cov-report term-missing \
+          --write -L 0 1 2 -Iextern/iverilog/driver/iverilog
 
   quick:
     runs-on: ubuntu-latest
@@ -135,7 +135,7 @@ jobs:
     # Joins the matrix runs and makes sure all successful
     if: ${{ always() }}
     runs-on: ubuntu-latest
-    needs: [quick, full]
+    needs: [quick, full, iverilog]
     steps:
       - run: exit 1
         # see https://stackoverflow.com/a/67532120/4907315
