--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -14,43 +14,10 @@ on:
       - ready_for_review
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  iverilog:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.11"]
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: True
-      - name: Build Icarius Verilog
-        run: |
-          bash extern/iverilog_setup.sh
-          extern/iverilog/driver/iverilog -V
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r tests/requirements.txt
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Download expect
-        run: |
-          sudo apt-get install expect
-
-      - name: Run Pytest
-        run: |
-          python3 -m pytest -v tests/ --cov=python2verilog/ --cov-report term-missing \
-          --write -L 0 1 2 -Iextern/iverilog/driver/iverilog
-
   quick:
     runs-on: ubuntu-latest
     strategy:
@@ -59,6 +26,7 @@ jobs:
         python-version: ["3.11"]
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
@@ -70,7 +38,7 @@ jobs:
           python3 -m pip install -r tests/requirements.txt
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Download iverilog
+      - name: Download Icarus Verilog and Utilities
         run: |
           sudo apt-get install iverilog expect
 
@@ -98,6 +66,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
@@ -109,7 +78,7 @@ jobs:
           python3 -m pip install -r tests/requirements.txt
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Download iverilog
+      - name: Download Icarus Verilog and Utilities
         run: |
           sudo apt-get install iverilog expect
 
@@ -123,7 +92,7 @@ jobs:
       - name: Run Pytest
         run: |
           python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
-          ${{ matrix.pytest-args }} ${{ matrix.pytest-opti-levels }} --log-cli-level=DEBUG
+          ${{ matrix.pytest-args }} ${{ matrix.pytest-opti-levels }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -135,7 +104,7 @@ jobs:
     # Joins the matrix runs and makes sure all successful
     if: ${{ always() }}
     runs-on: ubuntu-latest
-    needs: [quick, full, iverilog]
+    needs: [quick, full]
     steps:
       - run: exit 1
         # see https://stackoverflow.com/a/67532120/4907315
