--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -123,7 +123,7 @@ jobs:
       - name: Run Pytest
         run: |
           python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
-          ${{ matrix.pytest-args }} ${{ matrix.pytest-opti-levels }} --log-cli-level=DEBUG
+          ${{ matrix.pytest-args }} ${{ matrix.pytest-opti-levels }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
