--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -9,7 +9,7 @@ on:
     branches: ["main"]
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
@@ -22,6 +22,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: True
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
