--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Extensionless files
+*
+!/**/
+!*.*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -70,7 +75,7 @@ instance/
 .scrapy
 
 # Sphinx documentation
-docs/
+_docs/
 
 # PyBuilder
 .pybuilder/
