--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,4 +33,5 @@ warn_unused_configs = true
 warn_redundant_casts = true
 disallow_any_generics = true
 ignore_missing_imports = true
+check_untyped_defs = true
 # disallow_untyped_defs = true # TODO: require
