pass config around, disabled concurrency

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,9 +13,9 @@ on:
       - synchronize
       - ready_for_review
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
+#   cancel-in-progress: true
 
 jobs:
   iverilog:
