up ver num, correct artifacts

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -129,7 +129,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: tests-data
-          path: tests/integration/data
+          path: tests/integration/
 
   testing:
     # Joins the matrix runs and makes sure all successful
