--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -94,7 +94,7 @@ jobs:
       matrix:
         pytest-args: ["", "-RS", "-FRS", "-F"]
         pytest-opti-levels: ["-L 0 1 2 4 8", "-L 16"]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v3
