Cleaned up graph code (#161)
- Added `pycln` to `pre-commit` to remove unused imports

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,10 +17,11 @@ repos:
     hooks:
       - id: black
 
-  # - repo: https://github.com/PyCQA/autoflake
-  #   rev: v2.2.0
-  #   hooks:
-  #     - id: autoflake
+  - repo: https://github.com/hadialqattan/pycln
+    rev: v2.2.1 # Possible releases: https://github.com/hadialqattan/pycln/releases
+    hooks:
+      - id: pycln
+        args: [--config=pyproject.toml]
 
   - repo: https://github.com/pycqa/pylint
     rev: v2.17.4
