--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,5 @@
 [BASIC]
-good-names=i, j, k, ir, e, tb, rv
+good-names=i, j, k, ir, e, tb, rv, t, v
 
 [FORMAT]
 # variable-rgx="[a-z_][a-z0-9_]{0,30}$"
