more robust break continue testing

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -123,6 +123,7 @@ jobs:
       - name: Run Pytest
         run: |
           python3 -m pytest tests/ --cov=python2verilog/ --cov-report term-missing \
+          --log-cli-level=info \
           ${{ matrix.pytest-args }} ${{ matrix.pytest-opti-levels }}
 
       - name: Upload artifacts
