--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install package
         run: |
-          mkdir build -p && cd build && python3 -m pip install .. && cd ..
+          bash ./build.sh
 
       - name: Install requirements for examples
         working-directory: examples
